  Preferences dialog (set default storage class for uploads),
  the Copy or Move dialog (set the storage class for destination
  objects), and the Object Attributes dialog (see the current
  storage class property of objects)
- Added support for buckets located in the Asia Pacific
  (Singapore) location.

KUDOS TO:

- Alexey I. Froloff for Eucalyptus-friendly generated URLs patch.

-------------
Version 0.7.3
-------------

TOOLKIT

  * General

- Added support for the new S3 Bucket Versioning feature, and
  for Multi-Factor authenticated deletes.
- S3ServiceMulti#downloadObjects method now automatically verifies
  that the data received matches the ETag MD5 hash value provided by
  S3. JetS3t's applications, and any third-party clients that use 
  this method, will therefore get automatic data verificaiton of
  downloads similar to that provided (in most cases) for uploads.
- Removed methods incompatible with JDK version 1.4.

  * CloudFront Service

- Updated service to support API version 2010-03-01 which allows
  streaming distributions to be made private.
- Fixed bug parsing that prevented AWS Account Numbers from 
  being parsed from XML responses into a DistributionConfig object.

COCKPIT

- Fixed bug that caused Cockpit to create buckets in the US Standard 
  location regardless of the location selected by the user.

SYNCHRONIZE

- When an encryption password or credentials file password must be
  entered by a user at the command prompt the characters are no
  longer echoed to standard output when run on JDK 1.6 or greater.

KUDOS TO:

Bennett Hiles for echo-less password input for Synchronize and
removal of methods incompatible with JDK 1.4.

-------------
Version 0.7.2
-------------

TOOLKIT

  * General

- Added support for private and streaming CloudFront distributions (see 
  the "CloudFront Service" section below)
- Changed default thread and connection count settings to improve 
  reliability when tranferring many large files and performance when 